/*
Author: Paul Côté
Last Change Author: Paul Côté
Last Date Changed: 2022/06/10
*/

syntax = "proto3";

package fmtrpc;

option go_package = "github.com/SSSOC-CAN/fmtd/fmtrpc";

service TestPlanExecutor {
    /* fmtcli: `load-testplan`
    LoadTestPlan will load the inputted testplan and ensure the FMT can currently run it.
    */
    rpc LoadTestPlan (LoadTestPlanRequest) returns (LoadTestPlanResponse);
    /* fmtcli: `start-testplan`
    StartTestPlan will start the loaded testplan. This will automatically start recording from services as need be.
    */
    rpc StartTestPlan (StartTestPlanRequest) returns (StartTestPlanResponse);
    /* fmtcli: `stop-testplan`
    StopTestPlan will stop the currently running testplan. This will automatically stop all data recording.
    */
    rpc StopTestPlan (StopTestPlanRequest) returns (StopTestPlanResponse);
    /* fmtcli: `insert-roi`
    InsertROIMarker will insert a Region of Interest (ROI) marker within the testplan report based on given parameters. 
    */
    rpc InsertROIMarker (InsertROIRequest) returns (InsertROIResponse);
}

message LoadTestPlanRequest {
    // The path to the testplan file
    string path_to_file = 1;
}

message LoadTestPlanResponse {
    // A short message indicating success or failure
    string msg = 1;
}

message StartTestPlanRequest {
}

message StartTestPlanResponse {
    // A short message indicating success or failure
    string msg = 1;
}

message StopTestPlanRequest {
}

message StopTestPlanResponse {
    // A short message indicating success or failure
    string msg = 1;
}

enum ReportLvl {
    INFO = 0;
    ERROR = 1;
    DEBUG = 2;
    WARN = 3;
    FATAL = 4;
}

message InsertROIRequest {
    // The content of the message of the ROI being inserted into the testplan file
    string text = 1;

    // The log level with the ROI being inserted into the testplan file
    ReportLvl report_lvl = 2;

    // The author of the ROI being inserted into the testplan file
    string author = 3;
}

message InsertROIResponse {
    // A short message indicating success or failure
    string msg = 1;
}