/*
Author: Paul Côté
Last Change Author: Paul Côté
Last Date Changed: 2022/09/20

Copyright (C) 2015-2018 Lightning Labs and The Lightning Network Developers

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
*/
syntax = "proto3";

package lanirpc;

import "plugin.proto";

option go_package = "github.com/SSSOC-CAN/fmtd/lanirpc";

// Lani is the main RPC server of the daemon.
service Lani {
    /* lanicli: `stop`
    StopDaemon will send a shutdown request to the interrupt handler, triggering
    a graceful shutdown of the daemon.
    */
    rpc StopDaemon (StopRequest) returns (StopResponse);
    /* lanicli: `admin-test`
    AdminTest will send a string response if the proper macaroon is provided.
    */
    rpc AdminTest (AdminTestRequest) returns (AdminTestResponse);
    /* lanicli: `test`
    TestCommand will send a string response regardless if a macaroon is provided or not.
    */
    rpc TestCommand (TestRequest) returns (TestResponse);
    /* lanicli: `bake-macaroon`
    BakeMacaroon will bake a new macaroon based on input permissions and constraints.
    */
    rpc BakeMacaroon (BakeMacaroonRequest) returns (BakeMacaroonResponse);
    /*
    Deprecated! SetTemperature will now be a demo controller plugin which uses PluginAPI Command
    */
    rpc SetTemperature(proto.Empty) returns (proto.Empty);
    /*
    Deprecated! SetPressure will now be a demo controller plugin which uses PluginAPI Command
    */
    rpc SetPressure(proto.Empty) returns (proto.Empty);
    /*
    Deprecated! StartRecording is now /lanirpc.PluginAPI/StartRecord
    */
    rpc StartRecording(proto.Empty) returns (proto.Empty);
    /*
    Deprecated! StopRecording is now /lanirpc.PluginAPI/StopRecord
    */
    rpc StopRecording(proto.Empty) returns (proto.Empty);
    /*
    Deprecated! SubscribeDataStream is now /lanirpc.PluginAPI/Subscribe
    */
    rpc SubscribeDataStream(proto.Empty) returns (proto.Empty);
    /*
    Deprecated! LoadTestPlan will no longer be supported
    */
    rpc LoadTestPlan(proto.Empty) returns (proto.Empty);
    /*
    Deprecated! StartTestPlan will no longer be supported
    */
    rpc StartTestPlan(proto.Empty) returns (proto.Empty);
    /*
    Deprecated! StopTestPlan will no longer be supported
    */
    rpc StopTestPlan(proto.Empty) returns (proto.Empty);
    /*
    Deprecated! InsertROIMarker will no longer be supported
    */
    rpc InsertROIMarker(proto.Empty) returns (proto.Empty);
}

message StopRequest {
}

message StopResponse {
}

message AdminTestRequest {
}

message AdminTestResponse {
    // A short message indicating success or failure
    string msg = 1;
}

message TestRequest {
}

message TestResponse {
    // A short message indicating success or failure
    string msg = 1;
}

message MacaroonPermission {
    // The entity a permission grants access to
    string entity = 1;

    // The action that is granted
    string action = 2;
}

enum TimeoutType {
    SECOND = 0;
    MINUTE = 1;
    HOUR = 2;
    DAY = 3;
}

message BakeMacaroonRequest {
    // The length of time for which this macaroon is valid
    int64 timeout = 1;

    // The unit for the macaroon timeout. Choose from `SECOND`, `MINUTE`, `HOUR` or `DAY`
    TimeoutType timeout_type = 2;

    // The list of permissions the new macaroon should grant
    repeated MacaroonPermission permissions = 3;

    // The list of plugin names to be included in the macaroon
    repeated string plugins = 4;
}

message BakeMacaroonResponse {
    // The hex-encoded macaroon, serialized in binary format
    string macaroon = 1;
}